--- a/src/main/templates/main/layout.html
+++ b/src/main/templates/main/layout.html
@@ -1,74 +1,6 @@
-{% load i18n %}
-{% load static %}
-<!DOCTYPE html>
-<html>
-<head>
+{% extends 'main/layout_with_out_nav.html' %}
 
-    <title>Protección Ambiental</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- bootstrap -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <!--<link href="{% static 'main/css/bootstrap/bootstrap.css'%}" rel="stylesheet"/>-->
-    <link href="{% static 'main/css/bootstrap/bootstrap-overrides.css'%}" type="text/css" rel="stylesheet"/>
-
-    <!-- libraries -->
-    <link href="{% static 'main/css/lib/jquery-ui-1.10.2.custom.css'%}" rel="stylesheet" type="text/css"/>
-    <link href="{% static 'main/css/lib/font-awesome.css'%}" type="text/css" rel="stylesheet"/>
-
-    <!-- global styles -->
-    <link rel="stylesheet" type="text/css" href="{% static 'main/css/compiled/layout.css'%}"/>
-    <link rel="stylesheet" type="text/css" href="{% static 'main/css/compiled/elements.css'%}"/>
-    <link rel="stylesheet" type="text/css" href="{% static 'main/css/compiled/icons.css'%}"/>
-
-    <!-- this page specific styles -->
-    <link rel="stylesheet" href="{% static 'main/css/compiled/index.css'%}" type="text/css" media="screen"/>
-
-
-    {% block more_styles %}
-    {% endblock %}
-    <!-- open sans font -->
-    <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800'
-          rel='stylesheet' type='text/css'/>
-
-    <!-- lato font -->
-    <link href='http://fonts.googleapis.com/css?family=Lato:300,400,700,900,300italic,400italic,700italic,900italic'
-          rel='stylesheet' type='text/css'/>
-
-    <!--[if lt IE 9]>
-    <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-
-
-</head>
-
-
-<body>
-<header class="navbar navbar-inverse" role="banner">
-    <div class="navbar-header">
-        <button class="navbar-toggle" type="button" data-toggle="collapse" id="menu-toggler">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-        </button>
-        <a class="navbar-brand" href="index.html">
-            <img src="img/logo.png" alt="logo"/>
-        </a>
-    </div>
-    <ul class="nav navbar-nav pull-right hidden-xs">
-        <li class="dropdown">
-            <a href="#" class="dropdown-toggle hidden-xs hidden-sm" data-toggle="dropdown">
-                {{request.user.first_name}}
-                <b class="caret"></b>
-            </a>
-            <ul class="dropdown-menu">
-                <li><a href="{% url 'accounts:logout' %}">{% trans 'logout' %}</a></li>
-            </ul>
-        </li>
-    </ul>
-</header>
-
+{% block sidebar %}
 <div id="sidebar-nav">
     <ul id="dashboard-menu">
         <li class="requirement">
@@ -103,34 +35,4 @@
         </li>
     </ul>
 </div>
-
-<div class="content">
-    {% block content %}
-
-    {% endblock %}
-</div>
-
-<script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
-<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-<link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
-<script>
-      $( function() {
-        $( ".datepicker" ).datepicker({dateFormat: "yy-mm-dd"});
-      } );
-
-    function active_menu(li_selector){
-        $(li_selector).addClass("active");
-        $(li_selector).prepend('<div class="pointer"><div class="arrow"></div><div class="arrow_border"></div></div>');
-    }
-
-
-
-</script>
-{% block more_scripts %}
-
 {% endblock %}
-</body>
-
-</html>
-
