--- a/src/main/templates/main/layout_with_out_nav.html
+++ b/src/main/templates/main/layout_with_out_nav.html
@@ -52,8 +52,8 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="index.html">
-            <img src="img/logo.png" alt="logo"/>
+        <a class="navbar-brand" href="/">
+            <img src="{% static 'main/img/logo.png' %}" style="max-height: 34px;" alt="Pro"/>
         </a>
     </div>
     <ul class="nav navbar-nav pull-right hidden-xs">
@@ -91,6 +91,8 @@
         $(li_selector).addClass("active");
         $(li_selector).prepend('<div class="pointer"><div class="arrow"></div><div class="arrow_border"></div></div>');
     }
+
+
 
 
 
