--- a/src/main/templates/main/ley_seguridad.html
+++ b/src/main/templates/main/ley_seguridad.html
@@ -1,4 +1,4 @@
-{% extends 'main/layout_form.html' %}
+{% extends 'main/layout.html' %}
 {% block content %}
 
 
@@ -30,8 +30,8 @@
                 
                	<tr>
                     <td><a href="{% url 'main:panel' c.pk %}">{{ c.name }}</a></td>
-                    <td>{{ c.ruc }}</a></td>
-                    <td>{{ c.address }}</a></td>
+                    <td>{{ c.ruc }}</td>
+                    <td>{{ c.address }}</td>
               	</tr>
    
               	{% endfor %}
