--- a/src/main/templates/main/requirements/format.html
+++ b/src/main/templates/main/requirements/format.html
@@ -24,7 +24,7 @@
                     <tbody>
                     {% for format in formats_pdf %}
                         <tr>
-                            <td><a href="#">{{ format.file }}</a></td>
+                            <td><a href="{{ format.file.path_re }}">{{ format.file }}</a></td>
                             <td>
                                 <div>
                                     <button type="button" class="btn btn-primary" data-toggle="modal"
